--- a/2FET/Week8-CSS/Week8CA/styles.css
+++ b/2FET/Week8-CSS/Week8CA/styles.css
@@ -6,6 +6,7 @@ body {
     /* align-items: center; */
     background-color: rgb(88, 143, 177);
     padding: 10px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 /*  */
@@ -25,21 +26,17 @@ h1 {
 /*  */
 nav{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-decoration: none;
 }
 
-/*  */
-li {
-    align-items: center;
+
+.navlinks, ul {
+    flex-grow: 1;
     display: flex;
-    flex-direction: column;
-    text-align: center;
-    display: flex;
-    max-width: 50%;
-    padding: 5px;
-    margin: 5px;
-    border-radius: 3px;
+    justify-content: space-around;
+    padding: 0px;
+    margin: 0px;
+    list-style-type: none;
 }
 
 /*  */
