--- a/2FET/Week8-CSS/Week8CA/styles.css
+++ b/2FET/Week8-CSS/Week8CA/styles.css
@@ -1,41 +1,37 @@
 /* changing the whole background color of all pages */
 body {
-    border-style: double;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
     background-color: rgb(88, 143, 177);
     padding: 10px;
     font-family:Arial, Helvetica, sans-serif;
 }
 
 /*  */
-header {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    margin: 5px;
-}
-
-h1 {
-    border-left: 6px solid rgb(234, 162, 46); 
+.title {
+    border-left: 5px solid rgb(234, 162, 46);
+    border-bottom-left-radius: 50px;
+    padding-left: 15px; 
 }
 
 /*  */
-nav{
+.top-navbar {
+    background-color:rgba(154, 154, 154, 0.6);
     display: flex;
-    text-decoration: none;
+    padding: 15px;
+    color: whitesmoke;
+    border-radius: 10px;
 }
 
-
-.navlinks, ul {
+.top-navbar, ul {
     flex-grow: 1;
     display: flex;
     justify-content: space-around;
-    padding: 0px;
-    margin: 0px;
+    flex-wrap: wrap;
+}
+
+/*  */
+ul, li {
+    margin: 0;
+    padding: 0;
     list-style-type: none;
 }
 
@@ -51,12 +47,18 @@ main {
     border-style: solid;
     padding: 5px;
     margin: 5px;
-    border-radius: 3px;
+    border-radius: 10px;
 }
 /*  */
 .images {
     display: flexbox;
     align-self: center;
+    border-radius: 10px;
+}
+
+/*  */
+img {
+    display: flexbox;
 }
 
 /*  */
@@ -65,15 +67,28 @@ form {
     padding: 10px;
     border-radius: 3px;
     align-content: center;
+    margin: 0;
 }
 
-table {
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-direction: column;
+/*  */
+.about-table {
+    width: 100%;
+    border-collapse: collapse;
 }
+
+.about-table tr{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+.about-table th td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid, black;
+}
+
 
 /*  */
 footer {
