--- a/2FET/Week8-CSS/Week8CA/styles.css
+++ b/2FET/Week8-CSS/Week8CA/styles.css
@@ -1,8 +1,11 @@
 /* changing the whole background color of all pages */
 body {
     background-color: rgb(88, 143, 177);
+    width: 100vw;
+    height: 100vh;
     padding: 10px;
     font-family:Arial, Helvetica, sans-serif;
+    margin: 15px;
 }
 
 /*  */
@@ -50,15 +53,44 @@ main {
     border-radius: 10px;
 }
 /*  */
-.images {
+/* .images {
     display: flexbox;
     align-self: center;
     border-radius: 10px;
-}
+} */
 
 /*  */
-img {
-    display: flexbox;
+/* img { */
+    /* display: flexbox; */
+/* } */
+
+#programmer-gif {
+    height: auto;
+    width: 100%;
+    /* image will be no larger than 50% */
+    /* max-width: 50%; */
+    /* image will be no smaller than 25% */
+    min-width: 50px;
+}
+
+@media only screen 
+   and (max-width : 1125px) 
+   and (max-height : 2001px) {
+    /* adding  */
+   /* Styles here */
+   #programmer-gif {
+    height: auto;
+    width: 50%;    
+    }   
+}
+
+@media only screen 
+   and (min-width : 320px) {
+   /* Styles here */
+   #programmer-gif {
+    height: auto;
+    width: 300px;
+   }
 }
 
 /*  */
@@ -77,7 +109,8 @@ form {
 }
 
 .about-table tr{
-    display: flex;
+    display: grid;
+    grid: auto-flow / 1fr 1fr 1fr;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -101,3 +134,12 @@ footer, p {
     margin: 5px;
     border-radius: 3px;
 }
+
+#site-links {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+}
+
+/* vh / vw */
