--- a/2FET/Week8-CSS/Week8CA/styles.css
+++ b/2FET/Week8-CSS/Week8CA/styles.css
@@ -1,27 +1,32 @@
 /* changing the whole background color of all pages */
 body {
     background-color: rgb(88, 143, 177);
-    width: 100vw;
-    height: 100vh;
+    width: auto;
+    height: auto;
     padding: 10px;
     font-family:Arial, Helvetica, sans-serif;
-    margin: 15px;
+    margin: 10px;
 }
 
 /*  */
 .title {
-    border-left: 5px solid rgb(234, 162, 46);
-    border-bottom-left-radius: 50px;
-    padding-left: 15px; 
+    border-left: 10px solid rgb(234, 162, 46);
+    /* border-bottom-left-radius: 50px;
+    border-top-left-radius: 50px; */
+    border-radius: 10px;
+    padding-left: 20px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    font-size: x-large; 
 }
 
 /*  */
 .top-navbar {
     background-color:rgba(154, 154, 154, 0.6);
     display: flex;
-    padding: 15px;
-    color: whitesmoke;
+    color: rgb(234, 162, 46);
     border-radius: 10px;
+    padding: 15px 15px 5px 5px;
 }
 
 .top-navbar, ul {
@@ -33,8 +38,7 @@ body {
 
 /*  */
 ul, li {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
     list-style-type: none;
 }
 
@@ -42,6 +46,7 @@ ul, li {
 a:hover {
     color: blue;
 }
+
 
 /*  */
 main {
@@ -52,6 +57,7 @@ main {
     margin: 5px;
     border-radius: 10px;
 }
+
 /*  */
 /* .images {
     display: flexbox;
@@ -73,6 +79,18 @@ main {
     min-width: 50px;
 }
 
+#headshot {
+    height: auto;
+    width: 100%;
+    min-width: 50px;
+}
+
+#coding-screen {
+    height: auto;
+    width: 100%;
+    min-width: 50px;
+}
+
 @media only screen 
    and (max-width : 1125px) 
    and (max-height : 2001px) {
@@ -81,6 +99,14 @@ main {
    #programmer-gif {
     height: auto;
     width: 50%;    
+    }
+    #headshot {
+        height: auto;
+        width: 50%;
+    }   
+    #coding-screen {
+        height: auto;
+        width: 50%;
     }   
 }
 
@@ -89,15 +115,23 @@ main {
    /* Styles here */
    #programmer-gif {
     height: auto;
-    width: 300px;
+    width: 350px;
+   }
+   #headshot {
+    height: auto;
+    width: 350px;
+   }
+   #coding-screen {
+    height: auto;
+    width: 350px;
    }
 }
 
 /*  */
 form {
+    display: flexbox;
     text-align: center;
     padding: 10px;
-    border-radius: 3px;
     align-content: center;
     margin: 0;
 }
@@ -110,8 +144,7 @@ form {
 
 .about-table tr{
     display: grid;
-    grid: auto-flow / 1fr 1fr 1fr;
-    flex-wrap: wrap;
+    grid-template-columns: repeat(auto-fill, 200px);
     justify-content: center;
 }
 
@@ -143,3 +176,19 @@ footer, p {
 }
 
 /* vh / vw */
+
+.contact-text {
+    height: auto;
+    width: 50%;
+    min-width: 50px;
+}
+
+.active-link a {
+    color: rgb(255, 255, 255);
+    font-size: 150%;
+}
+
+/* This will help venter the search bar inside the navbar element */
+#nav-search {
+    margin-top: -5px;
+}
