still building base for methods

--- a/3React/Week14-Props-State-Events-LifecycleMethods/week14-project/src/index.css
+++ b/3React/Week14-Props-State-Events-LifecycleMethods/week14-project/src/index.css
@@ -5,9 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* #root {
+    background-color: black;
+} */
+
+img {
+  float: right;
+  margin-right: 25%;
 }
