--- a/3React/Week14-Props-State-Events-LifecycleMethods/week14-project/src/index.css
+++ b/3React/Week14-Props-State-Events-LifecycleMethods/week14-project/src/index.css
@@ -105,3 +105,15 @@ svg {
   color: #faaf00;
   font-size: 2rem;
 }
+
+/* !!!!!!! */
+
+svg {
+  -webkit-transition: transform 0.2s ease;
+  transition: transform 0.1s ease;
+}
+
+svg:hover {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
