--- a/3React/Week16-ReactRouter-ReactBootstrap/test-quiz-app/src/App.css
+++ b/3React/Week16-ReactRouter-ReactBootstrap/test-quiz-app/src/App.css
@@ -39,7 +39,7 @@ body {
 .quiz-app {
   text-align: center;
   width: auto;
-  min-height: 400px;
+  min-height: 450px;
   height: auto;
   transform: translate(-50%, 20%);
   border-radius: 15px;
@@ -94,6 +94,7 @@ button {
 }
 
 .showScore-section {
+  max-width: fit-content;
   font-size: 35px;
   text-align: center;
   position: absolute;
@@ -102,24 +103,16 @@ button {
   transform: translate(-50%, -50%);
 }
 
-@media all and (max-width: 700px) {
+@media all and (max-width: 1200px) {
   .quiz-app {
     padding: 5px;
     width: 90%;
   }
+}
 
-  /* h1 {
-    font-size: 30px;
-  } */
-
-  /* p {
-    font-size: 26px;
-  } */
-
-  /* button {
-    width: 100%;
-    min-width: 60px;
-  } */
+.team-logo {
+  max-width: 200px;
+  height: auto;
 }
 
 /* .wrapper {
