--- a/3React/Week16-ReactRouter-ReactBootstrap/test-quiz-app/src/index.css
+++ b/3React/Week16-ReactRouter-ReactBootstrap/test-quiz-app/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* https: //blog.greenroots.info/3-quick-ways-to-add-fonts-to-your-react-app */
+@font-face {
+  font-family: "Formula1Regular";
+  src: local("Formula1Regular"), 
+    url("./fonts/Formula1/Formula1-Regular.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Formula1Bold";
+  src: local("Formula1Bold"), 
+    url("./fonts/Formula1/Formula1-Bold.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Formula1Wide";
+  src: local("Formula1Wide"), 
+    url("./fonts/Formula1/Formula1-Wide.otf") format("opentype");
+}
