--- a/3React/Week17-PropTypes-HigherOrderComponents-ReduxOverview/3react-js-blog/src/index.css
+++ b/3React/Week17-PropTypes-HigherOrderComponents-ReduxOverview/3react-js-blog/src/index.css
@@ -38,8 +38,7 @@ body {
   box-shadow: 0px 0px 15px gray;
 }
 
-.Header,
-.Footer {
+.Header, .Footer {
   width: 100%;
   background-color: royalblue;
   padding: 1rem;
