--- a/3React/Week16-ReactRouter-ReactBootstrap/test-quiz-app/src/App.css
+++ b/3React/Week16-ReactRouter-ReactBootstrap/test-quiz-app/src/App.css
@@ -3,7 +3,7 @@ body {
   background-size: 200% 200%;
   animation: verticalBreathing 15s ease infinite;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .navbar {
@@ -94,11 +94,12 @@ button {
 }
 
 .showScore-section {
-  max-width: fit-content;
+  /* max-width: fit-content; */
+  width: 500px;
   font-size: 35px;
   text-align: center;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -139,6 +140,7 @@ button {
 
   .showScore-section {
     font-size: 30px;
+    width: 350px;
   }
 }
 
